# sfs-framework

./: .gitignore  CMakeLists.txt  COPYRIGHT.md  DEPEND.md  EXTERNAL.md  Makefile  README.md  Version
lib/libfeatures/src/: features.md
lib/libflow/: Makefile
lib/libflow/src/: Cache.cpp  Cache.h  Image.h  ImageIO.h  Opencv.cpp  Opencv.h  OpticalFlow.cpp  Stochastic.cpp  Stochastic.h  project.h
lib/libmatches/src/: matches.md
ressource/: config.yaml
scripts/: README.md  all.bash  single.bash  straight.py
src/: framework-database.cpp  framework-database.hpp  framework-dense.cpp  framework-feature.cpp  framework-feature.hpp  framework-frontend.cpp  framework-frontend.hpp  framework-io.cpp  framework-io.hpp  framework-match.cpp  framework-match.hpp  framework-parameter.cpp  framework-parameter.hpp  framework-source.cpp  framework-source.hpp  framework-sparsefeature.cpp  framework-sparsefeature.hpp  framework-stillcompute.cpp  framework-stillcompute.hpp  framework-structure.cpp  framework-structure.hpp  framework-transform.cpp  framework-transform.hpp  framework-utiles.cpp  framework-utiles.hpp  framework-viewpoint.cpp  framework-viewpoint.hpp  framework-viewpointsource.cpp  framework-viewpointsource.hpp  framework.cpp  framework.hpp  framework.md  gms_matcher.cpp  gms_matcher.h  gms_matcher.hpp  sfs-main.cpp  sfs-main.hpp
